Basic page structure

--- a/index.html
+++ b/index.html
@@ -1,7 +1,28 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <meta charset="UFT-8">
+    <title>Welcome!</title>
+    <link href="style.css" rel="stylesheet" type="text/css"/>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1 style="margin-left: 0px; text-align: center;">Hi</h1>
+<p style="font-size: larger; font-family: 'Segoe Print'; text-align: center;">This is my personal website where I will be listing and updating some of my projects and social media. <br/> Please be patient and comprehensive with me, as I'm still learning HTML :)</p>
+<div>
+<img src="imgs/pfp.png" alt="The beautiful Runichi" style="width: 15%; height: 1; margin-left: 50px; float: left;"/>
+ <div style="padding: 10px; margin-left: 22pc;">
+    
+    <img src="imgs/location.png" width="3%" style="float: left; padding:1cqh;">
+    <p style="margin-left: 3pc; padding: auto; font-size: 25px;">United States</p><br/>
+
+    <img src="imgs/languages.png" width="3%" style="float: left; padding:1cqh;">
+    <p style="margin-left: 3pc; padding: auto; font-size: 25px;">English, Spanish & Portuguese</p>
+    <br/>
+    <img src="imgs/clock.png" width="3%" style="float: left; padding:1cqh;">
+
+    <div id="clock"></div>
+    <script src="time.js"></script>
+</div>
+</div>
 </body>
 </html>
